--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/AwardFund/AwardFund.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/AwardFund/AwardFund.cshtml
@@ -211,6 +211,14 @@
 				return;
 			}
 
+            // 為了 DOMPurify.sanitize 正常運作加上 <table><tbody></tbody></table>
+            function DOMPurifyData(data) {
+                data = '<table><tbody>' + data + '</tbody></table>';
+                data = DOMPurify.sanitize(data);
+                data = data.replace('<table><tbody>', '').replace('</tbody></table>', '');
+                return data;
+            }
+
 			function ReturnView(orderby, desc) {
 				$.ajax({
 					url: '@ClientRoute.GenerateUrl(this, "AwardFund", "GetSortedAwardFund")',
@@ -218,7 +226,7 @@
 					data: { orderby: orderby, desc: desc },
 					success: function (data) {
 						$('#result').empty();
-                        document.getElementById('result').innerHTML = data;
+                        document.getElementById('result').innerHTML = DOMPurifyData(data);
 						$('[data-popup]').magnificPopup();
 						$('[eh-compare]').trigger('exec');
 						$('[eh-focus]').trigger('exec');
