--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/CostRank/CostRank.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/CostRank/CostRank.cshtml
@@ -234,6 +234,14 @@
 				return;
 			}
 
+            // 為了 DOMPurify.sanitize 正常運作加上 <table><tbody></tbody></table>
+            function DOMPurifyData(data) {
+                data = '<table><tbody>' + data + '</tbody></table>';
+                data = DOMPurify.sanitize(data);
+                data = data.replace('<table><tbody>', '').replace('</tbody></table>', '');
+                return data;
+            }
+
 			function ReturnSortView(orderby, desc) {
 				$.ajax({
 					url: '@ClientRoute.GenerateUrl(this, "CostRank", "GetSortedCostRank")',
@@ -241,7 +249,7 @@
 					data: { orderby: orderby, desc: desc },
 					success: function (data) {
 						$('#result').empty();
-                        document.getElementById('result').innerHTML = data;
+                        document.getElementById('result').innerHTML = DOMPurifyData(data);
 						Removefall();
 						$('[data-popup]').magnificPopup();
 						$('[eh-compare]').trigger('exec');
