改另開視窗

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/IndexRecommendation/IndexRecommendation.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/IndexRecommendation/IndexRecommendation.cshtml
@@ -315,7 +315,7 @@
                                             <div class="c-cardTable__content">
                                                 <div class="l-target">
                                                     <div class="l-target__name">
-                                                        <a href="@Model.ETFDetailLink?id=@item.ProductCode" class="o-contentLink t-bold u-ellipsis-2">@item.ProductCode @item.ProductName</a>
+                                                        <a href="@Model.ETFDetailLink?id=@item.ProductCode" class="o-contentLink t-bold u-ellipsis-2" target="_blank">@item.ProductCode @item.ProductName</a>
                                                     </div>
                                                     @if (item.ETFDiscountTags != null)
                                                     {
@@ -522,7 +522,7 @@
                                             <div class="c-cardTable__content">
                                                 <div class="l-target">
                                                     <div class="l-target__name">
-                                                        <a href="@item.DetailLink" class="o-contentLink t-bold u-ellipsis-2">@item.FullName</a>
+                                                        <a href="@item.DetailLink" class="o-contentLink t-bold u-ellipsis-2" target="_blank">@item.FullName</a>
                                                     </div>
                                                     @if (item.Discount != null && item.Discount.Count > 0)
                                                     {
@@ -709,7 +709,7 @@
                                         <div class="c-cardTable__content">
                                             <div class="l-target">
                                                 <div class="l-target__name">
-                                                    <a href="#" class="o-contentLink t-bold u-ellipsis-2">SBY3 阿聯酋杜拜國家銀行公司債(限OBU及專業投資人申購)</a>
+                                                    <a href="#" class="o-contentLink t-bold u-ellipsis-2" target="_blank">SBY3 阿聯酋杜拜國家銀行公司債(限OBU及專業投資人申購)</a>
                                                 </div>
                                             </div>
                                         </div>
