修改 走勢圖 基金消失 自訂時間區間

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Compare/FundETFCompare.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Compare/FundETFCompare.cshtml
@@ -1208,7 +1208,7 @@
 
         function getParamsAndRedraw() {
             const obj = {
-                range: $('[data-compare-filter="dateRange"]:checked').val(),
+                range: $('[data-compare-filter="dateRange"]:checked').val() || 'custom',
                 startDate: $('[data-compare-filter="inputStart"]').val(),
                 endDate: $('[data-compare-filter="inputEnd"]').val(),
                 stock: new Array()
