--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailOverseas.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailOverseas.cshtml
@@ -56,9 +56,9 @@
                                     <ul class="l-tag">
                                         @foreach (var item in Model.TagsDic[FundTagEnum.DiscountTag])
                                         {
-                                        <li class="l-tag__item">
-                                            <span class="o-tag">@item</span>
-                                        </li>
+                                            <li class="l-tag__item">
+                                                <span class="o-tag">@item</span>
+                                            </li>
                                         }
                                     </ul>
                                 </div>
@@ -1778,7 +1778,7 @@
                                     <div id="soChart"></div>
                                 </div>
                             </div>
-                            <div class="l-dataNotes"><span class="t-date">資料日期：</span><span class="t-date" data-update-date="so1">2023/09/13</span></div>
+                            <div class="l-dataNotes"><span class="t-date">資料日期：</span><span class="t-date" data-update-date="so1">-</span></div>
                         </div>
                     </div>
                 </div>
@@ -3743,7 +3743,12 @@
                     } else {
                         $('label[data-area]').remove();
                     }
-                    $('[name="so1"]:checked').trigger('change');
+                    if ($('[name="so1"]').length) {
+                        $('[name="so1"]').first().prop('checked', true);
+                        $('[name="so1"]').first().trigger('change');
+                    } else {
+                        $('[data-chart="so1"]').addClass('u-hidden')
+                    }
                 } catch (error) {
                     console.error('Error:', error);
                 }
