Fix：全產品搜尋－基金幣別排序

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/SiteProductSearch/_ProductSearchResult.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/SiteProductSearch/_ProductSearchResult.cshtml
@@ -262,8 +262,8 @@
                     <option value="基金名稱低至高" data-sorting-column="ProductCode" data-sorting-class="is-asc">基金名稱低至高</option>
                     <option value="最新淨值高至低" data-sorting-column="NetAssetValue" data-sorting-class="is-desc">最新淨值高至低</option>
                     <option value="最新淨值低至高" data-sorting-column="NetAssetValue" data-sorting-class="is-asc">最新淨值低至高</option>
-                    <option value="幣別高至低" data-sorting-column="Currency.Key" data-sorting-class="is-desc">幣別高至低</option>
-                    <option value="幣別低至高" data-sorting-column="Currency.Key" data-sorting-class="is-asc">幣別低至高</option>
+                    <option value="幣別高至低" data-sorting-column="CurrencyPair.Key" data-sorting-class="is-desc">幣別高至低</option>
+                    <option value="幣別低至高" data-sorting-column="CurrencyPair.Key" data-sorting-class="is-asc">幣別低至高</option>
                     @*淨值績效*@
                     <option value="1個月原幣績效高至低" data-sorting-column="OneMonthReturnOriginalCurrency.Value" data-sorting-class="is-desc">1個月原幣績效高至低</option>
                     <option value="1個月原幣績效低至高" data-sorting-column="OneMonthReturnOriginalCurrency.Value" data-sorting-class="is-asc">1個月原幣績效低至高</option>
