Update：全產品搜尋－優惠標籤改成 span tag

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/SiteProductSearch/SearchResult/_EtfResultTemplate.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/SiteProductSearch/SearchResult/_EtfResultTemplate.cshtml
@@ -16,7 +16,7 @@
                         <ul class="l-tag">
                             <% for (var i = 0; i < DiscountTags.length; i++) { %>
                             <li class="l-tag__item">
-                                <a href="#" class="o-tag"><%= DiscountTags[i] %></a>
+                                <span class="o-tag"><%= DiscountTags[i] %></span>
                             </li>
                             <% } %>
                         </ul>
@@ -111,7 +111,7 @@
                         <ul class="l-tag">
                             <% for (var i = 0; i < DiscountTags.length; i++) { %>
                             <li class="l-tag__item">
-                                <a href="#" class="o-tag"><%= DiscountTags[i] %></a>
+                                <span class="o-tag"><%= DiscountTags[i] %></span>
                             </li>
                             <% } %>
                         </ul>
