--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/SiteProductSearch/SearchResult/_FundResultTemplate.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/SiteProductSearch/SearchResult/_FundResultTemplate.cshtml
@@ -17,7 +17,7 @@
                             <% for (var i = 0; i < Tags.length; i++) { %>
                             <li class="l-tag__item">
                                 <!-- <a href="#" class="o-tag">百元基金</a> -->
-                                <a href="#" class="o-tag"><%= Tags[i] %></a>
+                                <span class="o-tag"><%= Tags[i] %></span>
                             </li>
                             <% } %>
                         </ul>
@@ -145,7 +145,7 @@
                             <% for (var i = 0; i < Tags.length; i++) { %>
                             <li class="l-tag__item">
                                 <!-- <a href="#" class="o-tag">百元基金</a> -->
-                                <a href="#" class="o-tag"><%= Tags[i] %></a>
+                                <span class="o-tag"><%= Tags[i] %></span>
                             </li>
                             <% } %>
                         </ul>
