Update : 調整 hotkeyword queryString 名稱

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/StructuredProduct/StructuredProductSearch.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/StructuredProduct/StructuredProductSearch.cshtml
@@ -557,7 +557,7 @@
                         initAutocomplete(data);
 
                         var urlParams = new URLSearchParams(window.location.search);
-                        var hotkeyword = DOMPurify.sanitize(urlParams.get('HotKeyword'));
+                        var hotkeyword = DOMPurify.sanitize(urlParams.get('HotKeyWord'));
                         var hotproduct = DOMPurify.sanitize(urlParams.get('HotProduct'));
 
                         if (hotproduct) {
