--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/News/MarketNewsDetail.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/News/MarketNewsDetail.cshtml
@@ -39,7 +39,7 @@
             <div class="c-article__content">
                 <div class="c-section c-section--scroller">
                     <div class="l-paragraph" id="newsContent">
-                        @Html.Raw(Model.MarketNewsDetailData.NewsContent)
+                        @Model.MarketNewsDetailData.NewsContentHtmlString
                     </div>
                 </div>
 
@@ -67,7 +67,7 @@
             <div class="o-record">
 
                 @if (!string.IsNullOrEmpty(Model.MarketNewsDetailData.PreviousPageLink)
-                    && !string.IsNullOrEmpty(Model.MarketNewsDetailData.PreviousPageTitle))
+                && !string.IsNullOrEmpty(Model.MarketNewsDetailData.PreviousPageTitle))
                 {
                     <a href="@Model.MarketNewsDetailData.PreviousPageLink" class="o-record__nav o-record__nav--prev" id="prevBrnLink">
                         <span class="o-record__prev"></span>
@@ -76,7 +76,7 @@
                 }
 
                 @if (!string.IsNullOrEmpty(Model.MarketNewsDetailData.NextPageLink)
-                    && !string.IsNullOrEmpty(Model.MarketNewsDetailData.NextPageTitle))
+                && !string.IsNullOrEmpty(Model.MarketNewsDetailData.NextPageTitle))
                 {
                     <a href="@Model.MarketNewsDetailData.NextPageLink" class="o-record__nav o-record__nav--next" id="nextBrnLink">
                         <span class="o-record__title" id="nextBrnTitle">@Model.MarketNewsDetailData.NextPageTitle</span>
