fix: 調整會員牌卡

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/HeaderWidget/HeaderWidget.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/HeaderWidget/HeaderWidget.cshtml
@@ -9,7 +9,7 @@
 <script>
     addObjectValue(SC_DATA, 'IsLoggedIn', @(isLogin ? "true" : "false"));
     addObjectValue(SC_DATA, 'IsGlobalStyle', @(isGlobalStyle ? "true" : "false"));
-    addObjectValue(SC_DATA, 'WebBankId', @(WebBankId));
+    addObjectValue(SC_DATA, 'WebBankId', "@WebBankId");
     addObjectValue(SC_DATA, 'ItemId', '@Sitecore.Context.Item.ID');
 </script>
 
